Backend API Scaffolding + Database schema/migrations + Testing infrastructure setup

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,20 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "dev": "tsx src/index.ts",
     "lint": "eslint src --ext .ts",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "build": "tsc -p tsconfig.json",
-    "test": "node -e \"console.log('backend tests placeholder')\"",
-    "test:unit": "node -e \"console.log('backend unit tests placeholder')\"",
-    "test:integration": "node -e \"console.log('backend integration tests placeholder')\"",
-    "test:e2e": "node -e \"console.log('backend e2e tests placeholder')\""
+    "test": "pnpm run test:unit && pnpm run test:integration",
+    "test:unit": "vitest run --config vitest.config.ts --passWithNoTests",
+    "test:integration": "vitest run --config vitest.config.ts \"src/**/*.integration.test.ts\" --passWithNoTests",
+    "test:e2e": "vitest run --config vitest.config.ts \"src/**/*.e2e.test.ts\" --passWithNoTests"
+  },
+  "dependencies": {
+    "@hono/node-server": "^1.13.8",
+    "hono": "^4.6.15"
+  },
+  "devDependencies": {
+    "tsx": "^4.19.2"
   }
 }
