--- a/extension/package.json
+++ b/extension/package.json
@@ -8,10 +8,10 @@
     "build": "vite build",
     "lint": "eslint src --ext .ts,.tsx",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "test": "node -e \"console.log('extension tests placeholder')\"",
-    "test:unit": "node -e \"console.log('extension unit tests placeholder')\"",
-    "test:integration": "node -e \"console.log('extension integration tests placeholder')\"",
-    "test:e2e": "node -e \"console.log('extension e2e tests placeholder')\""
+    "test": "pnpm run test:unit && pnpm run test:integration",
+    "test:unit": "vitest run --config vitest.config.ts",
+    "test:integration": "vitest run --config vitest.config.ts \"tests/**/*.integration.test.ts\" --passWithNoTests",
+    "test:e2e": "pnpm run build && playwright test --config playwright.config.ts"
   },
   "dependencies": {
     "react": "^19.0.0",
