--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "test:unit": "turbo run test:unit",
     "test:integration": "turbo run test:integration",
     "test:e2e": "turbo run test:e2e",
+    "test:e2e:install": "playwright install --with-deps chromium",
     "format": "prettier --check ."
   },
   "devDependencies": {
+    "@playwright/test": "^1.51.1",
+    "@types/node": "^22.13.5",
     "@eslint/js": "^9.20.0",
     "eslint": "^9.20.1",
     "globals": "^15.14.0",
+    "jsdom": "^26.0.0",
     "prettier": "^3.5.1",
     "turbo": "^2.4.2",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.0"
+    "typescript-eslint": "^8.24.0",
+    "vitest": "^2.1.8"
   }
 }
