feat: implement political keyword detection and vector math utilities
- Add constants for vector limits and default thresholds.
- Create a benchmark for the political keyword filter to measure performance.
- Implement tests for the political keyword filter, ensuring coverage for various cases.
- Develop the political keyword filter logic to detect political content based on keywords and sensitivity thresholds.
- Introduce types for political vectors and thresholds to standardize data structures.
- Implement vector math utilities for clamping, distance calculation, and vector drift functionality.

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ NODE_ENV=development
 BACKEND_PORT=3001
 BACKEND_API_URL=http://localhost:3001
 BACKEND_INTERNAL_API_KEY=replace-with-secure-value
+EXTENSION_ORIGIN=chrome-extension://replace-with-extension-id
+RATE_LIMIT_PER_MINUTE=60
+ANALYZE_CACHE_TTL_MS=300000
 
 # Supabase
 SUPABASE_URL=https://your-project-ref.supabase.co
@@ -18,3 +21,8 @@ GEMINI_API_KEY=replace-with-gemini-api-key
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
 PERPLEXITY_API_KEY=
+
+# Test/e2e environment
+RUN_EXTENSION_BROWSER_E2E=0
+EXTENSION_UNPACKED_PATH=
+CI=
