--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -3,26 +3,16 @@
   "name": "RageBaiter",
   "version": "0.0.1",
   "description": "Detect political echo chambers and logical fallacies on Twitter/X with Socratic interventions",
-  "permissions": [
-    "storage",
-    "activeTab",
-    "sidePanel"
-  ],
-  "host_permissions": [
-    "*://x.com/*",
-    "*://twitter.com/*"
-  ],
+  "permissions": ["storage", "activeTab", "sidePanel"],
+  "host_permissions": ["*://x.com/*", "*://twitter.com/*"],
   "background": {
     "service_worker": "src/background/service-worker.ts",
     "type": "module"
   },
   "content_scripts": [
     {
-      "matches": [
-        "*://x.com/*",
-        "*://twitter.com/*"
-      ],
-      "js": ["src/content/content-script.ts"],
+      "matches": ["*://x.com/*", "*://twitter.com/*"],
+      "js": ["src/content/content-script.tsx"],
       "run_at": "document_idle"
     }
   ],
