--- a/extension/package.json
+++ b/extension/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.31",
     "@tailwindcss/postcss": "^4.0.6",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/chrome": "^0.0.304",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
