feat: Implement pipeline orchestration for political tweet analysis
- Add `pipeline.ts` to manage the processing of tweets through various stages including keyword filtering, backend analysis, decision making, and intervention injection.
- Introduce `AnalysisCache` for caching results of analyzed tweets to avoid redundant backend calls.
- Create `Semaphore` class to manage concurrency during tweet processing.
- Implement `applyFeedbackDrift` function to adjust political vectors based on user feedback.
- Add Playwright end-to-end tests for the extension's interaction with a mock Twitter page.
- Create integration tests for the pipeline orchestrator to ensure correct processing of political and non-political tweets.
- Add unit tests for vector feedback drift functionality.
- Introduce performance check script to monitor bundle size against a defined budget.

--- a/extension/package.json
+++ b/extension/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node ../scripts/perf-check.mjs --report-only --dist dist --report ../.sisyphus/evidence/task-27-bundle-report.json",
     "lint": "eslint src --ext .ts,.tsx",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "pnpm run test:unit && pnpm run test:integration",
