feat: Enhance demo functionality and improve environment handling
- Added demo routes to serve a demo feed with sample tweets.
- Implemented dynamic loading of environment variables from .env files.
- Updated CORS handling to support localhost for demo purposes.
- Improved fallback tweet ID generation for better scraping reliability.
- Enhanced intervention popup with counterarguments and user questions.
- Updated site configuration to include localhost patterns for compatibility.
- Added tests for fallback tweet ID and site configuration logic.

--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -4,14 +4,28 @@
   "version": "0.0.1",
   "description": "Detect political echo chambers and logical fallacies on Twitter/X with Socratic interventions",
   "permissions": ["storage", "activeTab", "sidePanel"],
-  "host_permissions": ["*://x.com/*", "*://twitter.com/*"],
+  "host_permissions": [
+    "*://x.com/*",
+    "*://twitter.com/*",
+    "http://localhost/*",
+    "https://localhost/*",
+    "http://127.0.0.1/*",
+    "https://127.0.0.1/*"
+  ],
   "background": {
     "service_worker": "src/background/service-worker.ts",
     "type": "module"
   },
   "content_scripts": [
     {
-      "matches": ["*://x.com/*", "*://twitter.com/*"],
+      "matches": [
+        "*://x.com/*",
+        "*://twitter.com/*",
+        "http://localhost/*",
+        "https://localhost/*",
+        "http://127.0.0.1/*",
+        "https://127.0.0.1/*"
+      ],
       "js": ["src/content/content-script.tsx"],
       "run_at": "document_idle"
     }
