feat: complete production build — all 26 tasks across 6 waves
Wave 1 — Supabase Foundation
- T1: schema migration (users, analyzed_tweets, user_feedback, quiz_responses)
- T2: RLS policies on analyzed_tweets

Wave 2 — Backend Productionization
- T3: real HS256 JWT verification middleware (SUPABASE_JWT_SECRET)
- T4: service role key for quiz/user routes; authId wired into cache upsert
- T5: POST /api/feedback endpoint with idempotent insert
- T6: CORS tightened to EXTENSION_ORIGIN + VISUALIZER_ORIGIN; rate-limit keyed by authId; DELETE method added

Wave 3 — Extension Hardening
- T7: manifest.prod.json (CWS-ready) + manifest.dev.json split; vite picks by mode
- T8: Shadow DOM isolation for InterventionPopup; CSS extracted to intervention-popup.css; adoptedStyleSheets
- T9: logger.ts replacing all console calls; vite-env.d.ts for import.meta.env types
- T10: LLM config stripped to internal-only Gemini; clearLegacyLlmStorageKeys on SW startup
- T11: ErrorBoundary wrapping sidepanel, popup, content-script
- T12: SW lifecycle resilience — chrome.storage.session vector cache, chrome.storage.local feedback queue, chrome.alarms retry

Wave 4 — Visualization Dashboard
- T13: visualization added to pnpm workspace; package renamed @ragebaiter/visualization
- T14: Supabase email+password auth gate (useAuth, AuthPage, App.tsx sign-out)
- T15: production-safe bridge origin validation (VITE_EXTENSION_ORIGIN / VITE_VISUALIZER_URL)
- T16: TweetHistoryFeed + SVG DriftChart + 2s polling + mobile-responsive layout

Wave 5 — Testing & CI
- T17: backend integration tests for analyze, feedback, quiz, user routes + test helpers
- T18: Playwright E2E suite against demo page fixture (intervention, quiz, feedback-drift specs)
- T19: InterventionPopup visual fixture (6 states) + docs/screenshots/README.md
- T20: GitHub Actions CI pipeline (lint -> typecheck -> test:unit -> build)

Wave 6 — Chrome Web Store Readiness
- T21: manifest.prod.json permissions audit; docs/permissions-justification.md

--- a/.env.example
+++ b/.env.example
@@ -6,13 +6,24 @@ BACKEND_PORT=3001
 BACKEND_API_URL=http://localhost:3001
 BACKEND_INTERNAL_API_KEY=replace-with-secure-value
 EXTENSION_ORIGIN=chrome-extension://replace-with-extension-id
+VISUALIZER_ORIGIN=https://replace-with-visualizer-origin
 RATE_LIMIT_PER_MINUTE=60
 ANALYZE_CACHE_TTL_MS=300000
 
+# Extension <-> Visualization Bridge (Vite requires VITE_ prefix for client access)
+VITE_EXTENSION_ORIGIN=chrome-extension://replace-with-extension-id
+VITE_VISUALIZER_URL=https://replace-with-visualizer-url
+
 # Supabase
+SUPABASE_ACCESS_TOKEN=replace-with-supabase-access-token
 SUPABASE_URL=https://your-project-ref.supabase.co
 SUPABASE_ANON_KEY=replace-with-supabase-anon-key
 SUPABASE_SERVICE_ROLE_KEY=replace-with-supabase-service-role-key
+SUPABASE_JWT_SECRET=replace-with-supabase-jwt-secret
+
+# Observability (Sentry — leave blank to disable)
+SENTRY_DSN=
+VITE_SENTRY_DSN=
 
 # Internal analysis model (project-owned)
 GEMINI_API_KEY=replace-with-gemini-api-key
