--- a/visualization/package.json
+++ b/visualization/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "ragebaiter-3d",
+  "name": "@ragebaiter/visualization",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint src --ext .ts,.tsx",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "test": "echo 'no tests'"
   },
   "dependencies": {
     "@react-three/drei": "^10.7.7",
