--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
+    "@ragebaiter/shared": "workspace:^",
     "@sentry/node": "^10.39.0",
     "hono": "^4.6.15"
   },
