--- a/extension/package.json
+++ b/extension/package.json
@@ -14,6 +14,7 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@ragebaiter/shared": "workspace:^",
     "@sentry/browser": "^10.39.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
